--- a/Code/Chess/nbproject/private/private.properties
+++ b/Code/Chess/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Vynicius Pontes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Thiago\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
