--- a/Code/Chess/nbproject/private/private.properties
+++ b/Code/Chess/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/vyniciuspontes/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\Vynicius\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
