Modificações no framework, janelas de fim de jogo e correção em testes de unidade

--- a/Code/Chess/nbproject/project.properties
+++ b/Code/Chess/nbproject/project.properties
@@ -29,11 +29,11 @@ dist.jar=${dist.dir}/Chess.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.game-framework-1.0.jar-1=..\\Libraries\\GameFramework\\game-framework-1.0.jar
+file.reference.game-framework-1.0.jar=..\\Libraries\\GameFramework\\game-framework-1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.game-framework-1.0.jar-1}
+    ${file.reference.game-framework-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +56,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.game-framework-1.0.jar-1=C:\\Users\\Vynicius Pontes\\Documents\\GitHub\\Chess\\Code\\Libraries\\GameFramework\\javadoc
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
